--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -26,8 +26,10 @@ ipython==7.19.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.3
 itsdangerous==1.1.0
+JayDeBeApi==1.2.3
 jedi==0.18.0
 Jinja2==2.11.2
+JPype1==1.2.1
 jsonschema==3.2.0
 jupyter-client==6.1.11
 jupyter-core==4.7.0
